<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tw1"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:padding="5dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="8pt"
        android:gravity="right"/>
    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/ic"
        android:id="@+id/tw2"
        android:layout_below="@id/tw1"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="8pt"
        android:gravity="right"/>

    <TextView
        android:id="@+id/tw3"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tw2"
        android:padding="5dp"
        android:text="@string/house_address"
        android:textColor="#000000"
        android:textSize="8pt"
        android:gravity="right"/>
    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:id="@+id/tw4"
        android:layout_below="@id/twAddress"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="8pt"
        android:gravity="right"/>
    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:id="@+id/tw5"
        android:layout_below="@id/tw4"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="8pt"
        android:gravity="right"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:id="@+id/twName"
        android:layout_toRightOf="@id/tw3"
        android:padding="5dp"
        android:textSize="8pt"
        android:layout_below="@id/imageView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:id="@+id/twIC"
        android:layout_toRightOf="@id/tw3"
        android:padding="5dp"
        android:textSize="8pt"
        android:layout_below="@id/twName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:id="@+id/twAddress"
        android:layout_toRightOf="@id/tw3"
        android:padding="5dp"
        android:textSize="8pt"
        android:layout_below="@id/twIC"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:id="@+id/twPhone"
        android:layout_toRightOf="@id/tw3"
        android:padding="5dp"
        android:textSize="8pt"
        android:layout_below="@id/twAddress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:id="@+id/twEmail"
        android:layout_toRightOf="@id/tw3"
        android:padding="5dp"
        android:textSize="8pt"
        android:layout_below="@id/twPhone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogOut"
        android:text="@string/log_out"
        android:background="@drawable/button_background"
        android:layout_margin="5dp"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="158dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>
</RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>