<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >

    <Button
        android:id="@+id/btnCarTag"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#000000"
        android:drawableTop="@mipmap/ic_car_tag"
        android:onClick="CarTagRegister"
        android:paddingTop="5dp"
        android:text="@string/vehicle_register"
        android:textColor="#ffffff"
        android:textSize="5pt"
        app:layout_constraintEnd_toStartOf="@+id/vertical2"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal" />

    <Button
        android:id="@+id/btnEmergency"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableTop="@mipmap/notification2"
        android:background="@drawable/roundbutton"
        android:text="@string/emergency"
        android:textSize="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/vertical2"
        app:layout_constraintTop_toTopOf="@+id/horizontal"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btnReload"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:drawableTop="@mipmap/ic_reload"
        android:text="@string/wallet"
        android:textColor="#ffffff"
        android:textSize="5pt"
        app:layout_constraintBottom_toTopOf="@+id/horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/vertical2"
        app:layout_constraintTop_toTopOf="@+id/horizontal2"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/btnSupport"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:drawableTop="@mipmap/ic_support"
        android:text="@string/support"
        android:textColor="#ffffff"
        android:textSize="5pt"
        app:layout_constraintBottom_toTopOf="@+id/horizontal2"
        app:layout_constraintEnd_toStartOf="@+id/vertical2"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBilling"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:drawableTop="@mipmap/ic_pay"
        android:text="@string/billing"
        android:textColor="#ffffff"
        android:textSize="5pt"
        app:layout_constraintBottom_toTopOf="@+id/horizontal"
        app:layout_constraintEnd_toStartOf="@+id/vertical2"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal2"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:drawableTop="@mipmap/ic_feedback"
        android:text="@string/feedback"
        android:textColor="#ffffff"
        android:textSize="5pt"
        app:layout_constraintBottom_toTopOf="@+id/horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/vertical2" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="320dp" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />
</android.support.constraint.ConstraintLayout>